# tulip

./: .clang-format  .cmake-format.yaml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  appveyor_macos.sh  appveyor_msvc.bat  appveyor_msys2.bat  appveyor_msys2.sh  header.txt  q  talipot-config.in
bundlers/win/: CMakeLists.txt  Talipot.nsi.in  talipot_python_wheels_win_amd64.sh  win_bundle.bat
plugins/clustering/: CMakeLists.txt  CliqueEnumeration.cpp  CliqueEnumeration.h  ConvolutionClustering.cpp  ConvolutionClustering.h  ConvolutionClusteringSetup.cpp  ConvolutionClusteringSetup.h  ConvolutionClusteringSetup.ui  EqualValueClustering.cpp  HierarchicalClustering.cpp  HierarchicalClustering.h  QuotientClustering.cpp  StrengthClustering.cpp  StrengthClustering.h
plugins/clustering/Delaunay/: CMakeLists.txt  DelaunayTriangulation.cpp  VoronoiDiagram.cpp
plugins/export/: CMakeLists.txt  CSVExport.cpp  CSVExport.h  GMLExport.cpp
plugins/export/SVGExport/: CMakeLists.txt  ExportInterface.h  ExportSvg.cpp  ExportSvg.h  ReadGraph.cpp  SvgExportPlugin.cpp
plugins/glyph/: CMakeLists.txt  billboard.cpp  circle.cpp  cone.cpp  cross.cpp  cube.cpp  cubeoutlinedtransparent.cpp  cylinder.cpp  diamond.cpp  fonticon.cpp  glowsphere.cpp  hexagone.cpp  pentagone.cpp  ring.cpp  roundedbox.cpp  shadowedsphere.cpp  sphere.cpp  square.cpp  star.cpp  triangle.cpp  window.cpp
plugins/import/: AdjacencyMatrixImport.cpp  CMakeLists.txt  CompleteGraph.cpp  CompleteTree.cpp  ERRandomGraph.cpp  FileSystem.cpp  GEXFImport.cpp  GMLImport.cpp  GMLParser.h  Grid.cpp  ImportPajek.cpp  ImportUCINET.cpp  PlanarGraph.cpp  RandomGraph.cpp  RandomTree.cpp  RandomTreeGeneral.cpp  SmallWorldGraph.cpp  WebImport.cpp  dotImport.cpp  dotImportCLUT.h  dotImportLexer.h  dotImportParser.h
plugins/import/BibTeX/: CMakeLists.txt  ForceUtf8String.cpp  ImportBibTeX.cpp  NormalizeString.cpp
plugins/import/Git/: CMakeLists.txt  GitImport.cpp
plugins/import/Graphviz/: CMakeLists.txt  GraphvizImport.cpp  GraphvizUtils.cpp
plugins/import/SocialNetwork/: AttractAndIntroduce.cpp  BollobasModel.cpp  BuWangZhouModel.cpp  CMakeLists.txt  Catanzaro.cpp  FuLiao.cpp  GuillaumeLatapyModel.cpp  HolmeKim.cpp  KlemmEguiluzModel.cpp  LiuEtAl.cpp  WangEtAl.cpp  WangRong.cpp  WattsStrotgatzModel.cpp
plugins/interactor/: CMakeLists.txt  InteractorAddEdge.cpp  InteractorDeleteElement.cpp  InteractorEditEdgeBends.cpp  InteractorGetInformation.cpp  InteractorNavigation.cpp  InteractorRectangleZoom.cpp  InteractorSelection.cpp  InteractorSelectionModifier.cpp
plugins/interactor/FishEye/: CMakeLists.txt  FishEyeConfigWidget.ui  FishEyeInteractor.cpp  FishEyeInteractor.h
plugins/interactor/Fisheye/: CMakeLists.txt  FisheyeConfigWidget.cpp  FisheyeConfigWidget.h  FisheyeConfigWidget.ui  FisheyeInteractor.cpp  FisheyeInteractor.h
plugins/interactor/MouseLassoNodesSelector/: CMakeLists.txt  MouseLassoNodesSelector.cpp  MouseLassoNodesSelector.h
plugins/interactor/MouseMagnifyingGlass/: CMakeLists.txt  MouseMagnifyingGlass.cpp  MouseMagnifyingGlass.h
plugins/interactor/NeighborhoodHighlighter/: CMakeLists.txt  NeighborhoodHighlighterConfigWidget.cpp  NeighborhoodHighlighterConfigWidget.h  NeighborhoodHighlighterConfigWidget.ui  NeighborhoodHighlighterInteractor.cpp  NeighborhoodHighlighterInteractor.h  NodeNeighborhoodView.cpp  NodeNeighborhoodView.h
plugins/interactor/PathFinder/: CMakeLists.txt  PathFinder.cpp  PathFinder.h  PathFinderComponent.cpp  PathFinderComponent.h  PathFinderConfigurationWidget.cpp  PathFinderConfigurationWidget.h  PathFinderTools.cpp
plugins/layout/: BubblePack.cpp  BubbleTree.cpp  BubbleTree.h  CMakeLists.txt  Circular.cpp  Circular.h  ConeTreeExtended.cpp  ConeTreeExtended.h  ConnectedComponentPacking.cpp  ConnectedComponentPacking.h  DatasetTools.cpp  Dendrogram.cpp  Dendrogram.h  FastOverlapRemoval.cpp  FastOverlapRemoval.h  GEMLayout.cpp  GEMLayout.h  HierarchicalGraph.cpp  HierarchicalGraph.h  ImprovedWalker.cpp  ImprovedWalker.h  MixedModel.cpp  MixedModel.h  Number.cpp  Number.h  OrientableCoord.cpp  OrientableLayout.cpp  OrientableLayoutInterface.h  OrientableSize.cpp  Orientation.cpp  OrthoTree.cpp  PerfectLayout.cpp  PolyominoPacking.cpp  Random.cpp  RectanglePacking.cpp  RectanglePacking.h  RectangleRelativePositionList.cpp  RectangleRelativePositionList.h  SquarifiedTreeMap.cpp  SquarifiedTreeMap.h  (+9 more)
plugins/layout/Grip/: CMakeLists.txt  Distances.cpp  Distances.h  Grip.cpp  Grip.h  MISFiltering.cpp  MISFiltering.h
plugins/layout/LinLog/: CMakeLists.txt  LinLogAlgorithm.cpp  LinLogLayout.cpp  LinLogLayout.h  OctTree.cpp  OctTree.h
plugins/layout/OGDF/: CMakeLists.txt  OGDFBalloon.cpp  OGDFBertaultLayout.cpp  OGDFCircular.cpp  OGDFDominance.cpp  OGDFFastMultipoleEmbedder.cpp  OGDFFastMultipoleMultilevelEmbedder.cpp  OGDFFm3.cpp  OGDFFrutchermanReingold.cpp  OGDFGemFrick.cpp  OGDFKamadaKawai.cpp  OGDFNodeRespecterLayout.cpp  OGDFPivotMDS.cpp  OGDFPlanarizationGrid.cpp  OGDFPlanarizationLayout.cpp  OGDFStressMajorization.cpp  OGDFStressMinimization.cpp  OGDFSugiyama.cpp  OGDFTileToRowsPacking.cpp  OGDFTree.cpp  OGDFUpwardPlanarization.cpp  OGDFVisibility.cpp
plugins/view/GeographicView/: AddressSelectionDialog.cpp  AddressSelectionDialog.h  AddressSelectionDialog.ui  CMakeLists.txt  GeographicView.cpp  GeographicView.h  GeographicViewConfigWidget.cpp  GeographicViewConfigWidget.h  GeographicViewConfigWidget.ui  GeographicViewGraphicsView.cpp  GeographicViewGraphicsView.h  LeafletMaps.cpp  (+14 more)
tests/: CMakeLists.txt
tests/external_plugins_build/: CMakeLists.txt  build_and_test_plugin.cmake
tests/plugins/: BasicLayoutTest.cpp  BasicMetricTest.cpp  BasicPluginsTest.cpp  BasicPluginsTest.h  CMakeLists.txt  pluginsexecutiontest.cpp  pluginsloadingtest.cpp  pluginstest.cpp
tests/python/: CMakeLists.txt  test_graph_properties.py  test_graph_structure.py  test_plugin_registration_and_parameters.py  test_talipot_plugins.py
utils/crash_handler/: BfdWrapper.cpp  BfdWrapper.h  CMakeLists.txt  CrashHandler.cpp  CrashHandler.h  StackWalker.cpp  StackWalker.h  UnixSignalInterposer.cpp
(+413 files in other folders)
